# CCLoco

./: .gitignore  LICENSE  README.md  muon.py  muon_adaptive.py  pretokenize_data.py  pyproject.toml  run_sweep.sh  train.py
hparams/1B/: 1B_model_hparams.json
hparams/1B/sweeps/: adam_baseline.yaml  ccloco.yaml  ccloco_muon.yaml  demo_baseline.yaml  demo_diloco.yaml  diloco_baseline.yaml
hparams/2B/: 2B_model_hparams.json
hparams/2B/sweeps/: ccloco.yaml  ccloco_muon.yaml  ccloco_muon_clip.yaml
hparams/500M/: 500M_model_hparams.json
hparams/500M/sweeps/: adam_baseline.yaml  ccloco.yaml  ccloco_muon.yaml  ccloco_muon_clip.yaml  demo_baseline.yaml  demo_diloco.yaml  diloco_baseline.yaml
src/tplr/: __init__.py  ccloco.py  data.py  logging_utils.py  strategies.py
